add the .pub key into the commit. The gitignore was removing it from teh commit and terraform plan was failing.  The runner needs the public key and the private key. This is a security issue

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,18 @@ aws_hosts
 # course .gitignore
 # .gitignore
 
+
 # misc
 *.pem
-*keypair
-keypair*
-*keypair*
-*.pub
+
+#*keypair
+#keypair*
+#*keypair*
+#*.pub
+
+vprofile-keypair-terraform-project16
+
+
 
 
 # Local .terraform directories
